syntax = "proto3";
package story.evmstaking.v1.types;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/piplabs/story/client/x/evmstaking/types";

enum WithdrawalType {
  WITHDRAWAL_TYPE_UNSTAKE = 0;
  WITHDRAWAL_TYPE_REWARD = 1;
  WITHDRAWAL_TYPE_UBI = 2;
}

message Withdrawal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;

  uint64 creation_height = 1;
  string execution_address = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.moretags) = "yaml:\"execution_address\""
  ];
  uint64 amount = 3 [
    (gogoproto.moretags) = "yaml:\"amount\""
  ];
  WithdrawalType withdrawal_type = 4 [
    (gogoproto.moretags) = "yaml:\"withdrawal_type\""
  ];
}
