syntax = "proto3";
package client.x.evmstaking.types;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "client/x/evmstaking/types";

message Withdrawal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;

  uint64 creation_height = 1;
  string delegator_address = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];
  string validator_address = 3 [
    (cosmos_proto.scalar) = "cosmos.ValidatorAddressString",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];
  // TODO: use ethcommon.Address type
  string execution_address = 4 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.moretags) = "yaml:\"execution_address\""
  ];
  uint64 amount = 5 [
    // TODO: use custom Int type, need to resolve issue in auto-generated pb.go
    // (cosmos_proto.scalar)  = "cosmos.Int",
    // (gogoproto.customtype) = "cosmossdk.io/math.Int",
    // (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount\""
  ];
}
